# django-generic-links

./: .gitignore  .pre-commit-config.yaml  404.html  AUTHORS.md  AUTHORS.rst  CONTRIBUTING.md  CONTRIBUTING.rst  CONTRIBUTORS.txt  HISTORY.rst  LICENSE  MANIFEST.in  README.md  README.rst  index.html  manage.py  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  runtests.py  setup.cfg  setup.py  sitemap.xml  tasks.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  issue.yml
.github/workflows/: ci.yml  draft-release-and-upload-to-pypi.yml  gh-pages.yml  publish.yml  release.yml
contributing/: index.html
docs/: conf.py  contributing.md  index.md  index.rst  installation.rst  license.md  usage.rst
example_project/: requirements.txt
example_project/example_project/: asgi.py  settings.py  urls.py  wsgi.py
example_project/music_app/: admin.py  apps.py  models.py
example_project/music_app/migrations/: 0001_initial.py  0002_album_release_date.py
generic_links/: __init__.py  admin.py  apps.py  forms.py  index.html  managers.py  models.py  urls.py  utils.py  views.py
generic_links/migrations/: 0001_initial.py  0002_alter_genericlink_id_and_more.py
generic_links/templates/generic_links/: add.html
generic_links/templatetags/: generic_links_tags.py
generic_links/test_utils/test_app/: admin.py  apps.py  models.py
license/: index.html
search/: search_index.json
tests/: README.md  settings.py  test_forms.py  test_managers.py  test_models.py  test_templatetags.py  urls.py
tests/example/: urls.py  wsgi.py
