[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-generic-links"
dynamic = ["version"]
description = "Simple and generic application for Django projects to attach and handle links for any object"
readme = "README.md"
license = "BSD-3-clause"
authors = [
    { name = "Matias Agustin Mendez", email = "matagus@gmail.com" },
]
keywords = [
    "generic links", "django", "links", "urls", "generic app",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "Django>=4.2",
]

[project.urls]
Homepage = "https://github.com/matagus/django-generic-links"
Issues = "https://github.com/matagus/django-generic-links/issues"
Repository = "https://github.com/matagus/django-generic-links"
Changelog = "https://github.com/matagus/django-generic-links/releases"
Pypi = "https://pypi.org/project/django-generic-links"

[tool.hatch.version]
path = "generic_links/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "generic_links/",
]

[tool.hatch.build.targets.wheel]
include = [
    "generic_links/",
]

[tool.hatch.envs.default]
dependencies = [
    "Django>=4.2", "ipython", "ipdb", "mypy", "typing-extensions"
]

[tool.hatch.envs.project]
dependencies = [
    "Django>=4.2", "ipython", "ipdb", "mypy", "typing-extensions", "django-extensions", "Werkzeug"
]

[tool.hatch.envs.project.scripts]
server = "python example_project/manage.py runserver_plus"
shell = "python example_project/manage.py shell_plus"
migrate = "python example_project/manage.py migrate"
makemigrations = "python example_project/manage.py makemigrations"

# Test environment
[[tool.hatch.envs.test.matrix]]
django = ["4.2"]
python = ["3.10", "3.11", "3.12"]

[[tool.hatch.envs.test.matrix]]
django = ["5.0"]
python = ["3.10", "3.11", "3.12", "3.13"]

[[tool.hatch.envs.test.matrix]]
django = ["5.1"]
python = ["3.10", "3.11", "3.12", "3.13", "3.14"]

[[tool.hatch.envs.test.matrix]]
django = ["5.2"]
python = ["3.10", "3.11", "3.12", "3.13", "3.14"]

[tool.hatch.envs.test]
dependencies = ["coverage[toml]", "django~={matrix:django}.0"]

[tool.hatch.envs.test.scripts]
test = "python -m django test --settings tests.settings"
test-cov = "coverage run -m django test --settings tests.settings"
cov-report = ["coverage json", "coverage report"]
cov = ["test-cov", "cov-report"]

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120
